# tonalflex-neuralamp-plugin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build_log.txt  package-lock.json
.github/workflows/: release.yml
NAM/: Laney Lead Top, Boosted, Bright Switch On.nam  Laney Lead Top, Boosted.nam  Laney Lead Top.nam
neuralamp/: CMakeLists.txt
neuralamp/include/: editor.h  processor.h
neuralamp/src/: editor.cpp  processor.cpp
plugin/: CMakeLists.txt
plugin/include/: editor.h  processor.h
plugin/src/: editor.cpp  processor.cpp
release-build/: CMakeCache.txt
script/: build-arm64-headless.sh  install-webview2.ps1
ui/: index.html  package-lock.json  package.json
ui/public/: metadata.json
ui/src/: style.css
ui/src/components/: Plugin.vue
ui/src/components/controls/: ComboBoxControl.vue  SliderControl.vue  ToggleControl.vue
ui/src/composables/: useComboBoxParameter.ts
